--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -293,7 +293,7 @@ en:
     search:
       start: Start searching...
   landing:
-    about: "%{href} is a simple front-end for Bharat Live web conferencing server. You can create your own rooms to host sessions, or join others using a short and convenient link."
+    about: "BLive is a simple front-end for Bharat Live web conferencing server. You can create your own rooms to host sessions, or join others using a short and convenient link."
     welcome: Welcome to BLive.
     video: Watch our tutorial on using BLive
     upgrade: Show me how to upgrade to 2.0!
